# UAgriAIV

./: .gitignore  README.md  pyproject.toml
ai/treatment/: pyproject.toml
ai/treatment/database/: diseases.json
ai/treatment/edge-publisher/: mqtt_publisher.py
ai/treatment/engine/: recommender.py
ai/treatment/mapping/: heatmap_builder.py
ai/vision/: pyproject.toml
ai/vision/export/: export_tensorrt.py
ai/vision/train/: config.yaml  yolov8_finetune.py
backend/: .env.example  docker-compose.yml  out_current.json  out_forecast.json  pyproject.toml  requirements.txt  test_out.txt  test_weather.py  test_weather_json.py
backend/app/: main.py
backend/app/db/: database.py
backend/app/models/: detection.py  flight.py
backend/app/mqtt/: subscriber.py  topics.py
backend/app/routers/: alerts.py  detections.py  flights.py  treatments.py  weather.py
backend/app/services/: weather_service.py
backend/db/: init.sql
dashboard/: error_output.html  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  update_translations.py
dashboard/components/Layout/: Header.tsx  Layout.tsx  Sidebar.tsx
dashboard/components/UI/: Badge.tsx  StatCard.tsx
dashboard/lib/: api.ts  i18n.ts  mockData.ts
dashboard/locales/en/: translation.json
dashboard/locales/vi/: translation.json
dashboard/pages/: _app.tsx  crop-health.tsx  index.tsx  uav.tsx  weather.tsx
dashboard/styles/: globals.css
docs/: api-contracts.md  architecture.md  treatment-database.md
edge/: main.py  pipeline-config.yaml  pyproject.toml
hardware/: README.md
hardware/firmware/flight-controller/: ardupilot-params.md
hardware/firmware/relay-control/: relay_trigger.py
hardware/tests/: flight-test-log.md
mobile/: App.tsx  app.json  index.js  package-lock.json  package.json  tsconfig.json
mobile/src/components/: Badge.tsx  StatCard.tsx
mobile/src/locales/: en.json  index.ts  vi.json
mobile/src/navigation/: BottomTabNavigator.tsx
mobile/src/screens/: CropHealthScreen.tsx  HomeScreen.tsx  MapScreen.tsx  TreatmentScreen.tsx  UAVScreen.tsx  WeatherScreen.tsx
mobile/src/services/: api.ts  mockData.ts
scripts/: setup.sh
tests/: test_pipeline_e2e.py  test_treatment_engine.py
