[project]
name = "uagriaiv"
version = "1.0.0"
description = "UAV × AI Edge System for Agricultural Disease Detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.5",
]

[tool.uv.workspace]
members = ["backend", "edge", "ai/vision", "ai/treatment"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "ruff>=0.4.1",
    "mypy>=1.9.0",
]
